# reproeval

./: .env.example  .gitignore  Dockerfile.sandbox  Makefile  README.md  download-datasets.sh  pyproject.toml  sandbox-requirements.txt
docs/: architecture.md  dataset_portfolio.md  quickstart.md  security_review.md  testing.md
examples/: humaneval_run.yaml  local_humaneval_run.yaml  swebench_run.yaml
scripts/: download_datasets.py
src/codebench/: __init__.py
src/codebench/cli/: commands.py  main.py
src/codebench/core/config/: settings.py
src/codebench/core/interfaces/: __init__.py  artifact_store.py  provider.py  sandbox.py  scenario.py  scorer.py
src/codebench/core/models/: common.py
src/codebench/core/runner/: pipeline.py
src/codebench/datasets/: __init__.py
src/codebench/datasets/adapters/: __init__.py  yaml_loader.py
src/codebench/datasets/manifests/: cruxeval.yaml  (+6 more)
src/codebench/sandbox/: __init__.py
src/codebench/scenarios/: __init__.py
src/codebench/scoring/: pass_fail.py
src/codebench/utils/: dotenv.py
tests/e2e/: test_fixture_run.py
tests/fixtures/: __init__.py  humaneval_sample.json  humaneval_sample.jsonl  provider_responses.py  sandbox_programs.py
tests/unit/test_core/: test_artifacts.py  test_config.py  test_models.py  test_pipeline.py
tests/unit/test_datasets/: test_registry.py
tests/unit/test_providers/: test_chat_completions.py  test_responses.py
tests/unit/test_sandbox/: test_docker_runner.py  test_local_runner.py
tests/unit/test_scenarios/: test_function_codegen.py
tests/unit/test_scoring/: test_pass_fail.py
(+20 files in other folders)
